# AgenticRAG

./: .gitignore
backend/: GEMINI.md  adk_tutorial.md  how_to_use_adk.md  pyproject.toml
backend/docker/: Dockerfile
backend/src/: agent.py  app.py  dev.py  elasticsearch_client.py  es_search.py  schemas.py  search_client.py  settings.py  utils.py
backend/tests/: test_agent.py  test_connection.py  test_endpoint.py  test_indexing.py
